--- a/_posts/2009-10-9-1-03900.md
+++ b/_posts/2009-10-9-1-03900.md
@@ -112,19 +112,19 @@ tag: [normal]
 
 　　“说到金银，咱们是不是应该带一批925工业银，最好直接造些西班牙比索带过去。不然一过去怎么和土著贸易？”
 
-　　“那时代不缺白银。带白银过去，第一成本就不合算，其次还要占吨位。贸易又不一定非要靠真金白银才能进行。易货好了。”罗铎不以为然。
+　　“那时代不缺白银。带白银过去，第一成本就不合算，其次还要占吨位。贸易又不一定非要靠真金白银才能进行。易货好了。”[罗铎][y011]不以为然。
 
 　　“工业品生产是要有阶段的！”钟利时激动起来，“你觉得我们的工厂多久才能形成足够贸易的生产能力？起码三个月吧。你这三个月的补给和建设采购费用从哪里来？不要说去抢就好了！”
 
-　　“兄弟，你知道盐吗……”罗铎慢吞吞地说道，“自古以来，食盐是一种全世界通用的货币。起码在我们要去的时代，向土著买东西还是很有购买力的。”
+　　“兄弟，你知道盐吗……”[罗铎][y011]慢吞吞地说道，“自古以来，食盐是一种全世界通用的货币。起码在我们要去的时代，向土著买东西还是很有购买力的。”
 
 　　钟利时平静了一点：“我们会晒盐吗？”
 
-　　“不会，但是我们知道怎么晒盐。我手上有大把的资料。精盐、加碘盐、腌菜盐……”罗铎意气风发地笑了笑，“我们在座的谁会炼钢？谁会做玻璃？谁会造步枪？我们拥有三千年文明积累的智慧，有着工业革命以来全部的现代科技——”他的手戏剧性的一挥，“我们，无所不能！”
+　　“不会，但是我们知道怎么晒盐。我手上有大把的资料。精盐、加碘盐、腌菜盐……”[罗铎][y011]意气风发地笑了笑，“我们在座的谁会炼钢？谁会做玻璃？谁会造步枪？我们拥有三千年文明积累的智慧，有着工业革命以来全部的现代科技——”他的手戏剧性的一挥，“我们，无所不能！”
 
 　　这句他自认为富有感染力的话就好像丢到了沼泽里一样，咕咚了一下就消失了。除了钟利时充满怀疑的一瞥之外，没激起任何的浪花。
 
-　　在接下来的几分钟里，罗铎卖弄着他的制盐工艺，不时还和钟利时发生一点既不专业也不客观的争执。忽然[马千瞩][y005]叹了一口气：
+　　在接下来的几分钟里，[罗铎][y011]卖弄着他的制盐工艺，不时还和钟利时发生一点既不专业也不客观的争执。忽然[马千瞩][y005]叹了一口气：
 
 　　“俺们这里的讨论，怎么总是爱跑题呢？”
 
@@ -133,3 +133,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
+[y011]: /characters/y011 "罗铎"
