--- a/_posts/2009-11-14-2-02800.md
+++ b/_posts/2009-11-14-2-02800.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 　　这台用来发电的锅驼机原先打算安装在主城区，但它的污染严重，烟灰乱飞，噪音很大，加上锅炉需要大量的水，所以最后还是安装在水电区。为了防洪，水电区的火力电站、配电房、变电所所在的地基被专门垫高了。
 
-　　锅驼机虽然对穿越众来说有许多好处，但它每天需要的燃料也很可观，更不用说锅炉是需要用软水的，从船上给机器运蒸馏水未免太奢侈。如果使用天然水以雨水为最佳，河水也可以凑合，但是最好经过软化处理，罗铎说他可以做栲胶来进行水质软化，不过一时间没地方给他找原料。最后[王洛宾][y003]根据在农村的经验，说可以用烧过的开水代用。
+　　锅驼机虽然对穿越众来说有许多好处，但它每天需要的燃料也很可观，更不用说锅炉是需要用软水的，从船上给机器运蒸馏水未免太奢侈。如果使用天然水以雨水为最佳，河水也可以凑合，但是最好经过软化处理，[罗铎][y011]说他可以做栲胶来进行水质软化，不过一时间没地方给他找原料。最后[王洛宾][y003]根据在农村的经验，说可以用烧过的开水代用。
 
 　　给这个庞然大物烧开水，未免有点滑稽，河滩上一字排挖了好多炉灶，把船上带的锅子都卸了下来烧水，火苗熊熊，蒸汽弥漫，一时间无比的壮观。穿越众们又投入到割草伐木的工作中去，各种柴火堆得象小山一样。
 
@@ -57,3 +57,4 @@ tag: [normal]
 　　[王洛宾][y003]因为在广西农村生活工作过多年，对这种农村小水电之类的农用民生建筑很了解，最近的工程基本都是他在负责协调，在巡视工地的时候远远得看到水电站那边一群人围拢在一起，好像在争论着什么。他走近了点看见主要是建筑组和下属的工程队的人员在，一个是组长梅晚，另一个他有点印象，就是在公路基建的时候提出先修简易路的卓天敏。
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y011]: /characters/y011 "罗铎"
