--- a/_posts/2009-11-24-2-03800.md
+++ b/_posts/2009-11-24-2-03800.md
@@ -44,7 +44,7 @@ tag: [normal]
 
 　　它是一种连续生产窑，可以同时装坯、出砖、清扫。窑由很多互相连通的小室组成，如同一条环形的遂道，四周有许多窑门，所有的烟道都和窑中心的总烟道连接，燃料则是从窑顶的加料孔加入的。轮窑工作的时候分为：干燥、预热、煅烧和冷却四个工作带。一个16室的窑，第一室在出砖、第十六室已经在清扫，第十五室同时在装坯，接着第二室就可以出砖，第一室进行清扫，第十六室内可以装坯了。一旦点火就可以不间断的二十四小时连续生产，在工作效率和热能利用上都是传统窑望尘莫及的，一个普通的轮窑，一年可出砖瓦五千多万块。
 
-　　为了不浪费时间，在安装机械和建造轮窑的同时，梅晚决定先把已经阴干的那些砖瓦坯都烧出来，不过土窑的砖坯装窑是个技术活，无论是穿越者还是劳工谁也没干过。消息传回执委会，情报资料组的罗铎再次发挥了他两脚字典的功能，很快从电脑硬盘里找到了一本1958年出的《土法制砖瓦》的小册子的电子版，不到一小时，这本打印出来的小书就被火速送到了窑上，劳工们惊讶地看到这位“海贼匠人”用一本书在指导他们怎么装窑——这可是只有老师傅才知道的秘密！
+　　为了不浪费时间，在安装机械和建造轮窑的同时，梅晚决定先把已经阴干的那些砖瓦坯都烧出来，不过土窑的砖坯装窑是个技术活，无论是穿越者还是劳工谁也没干过。消息传回执委会，情报资料组的[罗铎][y011]再次发挥了他两脚字典的功能，很快从电脑硬盘里找到了一本1958年出的《土法制砖瓦》的小册子的电子版，不到一小时，这本打印出来的小书就被火速送到了窑上，劳工们惊讶地看到这位“海贼匠人”用一本书在指导他们怎么装窑——这可是只有老师傅才知道的秘密！
 
 　　砖窑附近有大批的茅草地，梅晚询问了过去在砖窑打过散工的劳工才知道这是作为燃料特意种的，土窑用这样的“软柴”才能烧得好，硬柴火力太猛，不容易控制火头。这些燃料，自然也被穿越众毫不客气的利用上了。
 
@@ -68,3 +68,4 @@ tag: [normal]
 
 　　在现代社会，水泥工业已经成为一种高度专业化，机械化的大生产，它涉及到许多特殊的大型专用设备，如破碎机、回转窑、球磨机等等。复制这样的大型设备对穿越者来说太奢侈了，即使买来现成的设备安装，这类巨型设备也不是他们的能力可以搞定的。
 [y001]: /characters/y001 "萧子山"
+[y011]: /characters/y011 "罗铎"
