--- a/_posts/2009-11-25-2-03900.md
+++ b/_posts/2009-11-25-2-03900.md
@@ -36,13 +36,13 @@ tag: [normal]
 
 　　此时这座轮窑的砖红色烟囱昂然的树立在文澜江畔的青山绿水间，对穿越者来说没有任何的违和感，宣告着穿越者的工业化时代正式开始。
 
-　　轮窑在开始烧之前要进行暖窑，建筑组又出发到博铺去，在那里为木材加工厂建设一座木材干燥窑，有了这座合乎标准的干燥窑，木材组就能源源不断的提供合格的木材制品给百仞城的工地，而不是现在用土窑干燥出来的湿度不一随时会干缩变形的临时代用木料。这件事情，[王洛宾][y003]就不参加了，干燥窑的尺寸材料，反正罗铎会去找书的，他在广西生活的时候也没见过这玩意。
+　　轮窑在开始烧之前要进行暖窑，建筑组又出发到博铺去，在那里为木材加工厂建设一座木材干燥窑，有了这座合乎标准的干燥窑，木材组就能源源不断的提供合格的木材制品给百仞城的工地，而不是现在用土窑干燥出来的湿度不一随时会干缩变形的临时代用木料。这件事情，[王洛宾][y003]就不参加了，干燥窑的尺寸材料，反正[罗铎][y011]会去找书的，他在广西生活的时候也没见过这玩意。
 
 　　看着建筑工程队爬上农用车向博铺开去，他忽然想起了一件事情，马上拨了一个电话给梅晚：“你和木材组的人商量下，再修一个木材干馏窑。”
 
 　　“干馏窑？”梅晚不知道这是什么东西。
 
-　　“就是烧炭的窑，一会你和罗铎说，他知道的。你们先研究一下，看看什么时候能够投产。”
+　　“就是烧炭的窑，一会你和[罗铎][y011]说，他知道的。你们先研究一下，看看什么时候能够投产。”
 
 　　既然没有煤炭，只有先用木炭来代用了。干馏木材，不仅可以得到木炭，还能获得用作化工原料的木焦油，这是种复杂的化合物，能提炼出许多有用的物质来。木炭本身的发热量也不逊于煤。
 
@@ -61,3 +61,4 @@ tag: [normal]
 　　“王田指挥得力，发二条。”这个奖励让王田兴奋的满脸放光，其他四个人都觉得有点酸溜溜的。多吃条咸鱼是小事，丢了面子才是大事，都盘算着晚上要狠狠的收拾几个磨洋工的家伙——杀鸡儆猴。
 [y003]: /characters/y003 "王洛宾"
 [y004]: /characters/y004 "展无涯"
+[y011]: /characters/y011 "罗铎"
