--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -408,7 +408,7 @@ tag: [normal]
 
 8、周伯韬（官人我要），现任政治保卫总局侦查处处长，历任政治保卫总署行动处处长
 
-9、罗铎（ID不详），现任总参谋部人员、政治保卫总署社工部负责人，历任能源组成员、情报资料组成员、基干民兵
+9、[罗铎][y011]（ID不详），现任总参谋部人员、政治保卫总署社工部负责人，历任能源组成员、情报资料组成员、基干民兵
 
 10、尤国团（ID不详），现任临高驻县办保卫特派员、特派巡视员，历任政治保卫总署审讯科成员
 
@@ -896,7 +896,7 @@ ID不明的穿越者（如有知情者请补充）
 
 10、袁秋实
 
-11、罗铎
+11、[罗铎][y011]
 
 12、尤国团
 
@@ -3452,3 +3452,4 @@ ID不明的穿越者（如有知情者请补充）
 [y156]: /characters/y156 "李潇侣"
 [y009]: /characters/y009 "吴南海"
 [y010]: /characters/y010 "常凯申"
+[y011]: /characters/y011 "罗铎"
