--- a/_posts/2009-9-16-1-01600.md
+++ b/_posts/2009-9-16-1-01600.md
@@ -100,7 +100,7 @@ tag: [normal]
 
 　　“材料问题。”季思退说，“除非能很快出不锈钢、聚乙烯这类的材料，否则我看十年之内自产化工设备是比较难的。”
 
-　　“用玻璃和陶瓷呢？八路军军工做硫酸就是用水缸做反应塔的。而且很多大跃进的土法化工设备也都是用这些东西。”罗铎又出来发言了。
+　　“用玻璃和陶瓷呢？八路军军工做硫酸就是用水缸做反应塔的。而且很多大跃进的土法化工设备也都是用这些东西。”[罗铎][y011]又出来发言了。
 
 　　“这个我不清楚。有条件采购现代化的设备就没必要使用土法设备。至少在生产效率上会提高很多。就是生产环境也比土法强。你们谁要是喜欢去用水缸做硫酸，就得好好考虑自己的牙齿问题。”
 
@@ -135,3 +135,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
 [y004]: /characters/y004 "展无涯"
+[y011]: /characters/y011 "罗铎"
