--- a/_posts/2010-10-25-3-19000.md
+++ b/_posts/2010-10-25-3-19000.md
@@ -30,7 +30,7 @@ tag: [normal]
 
 　　沉淀槽里上层的澄清液取出来放在水缸里，任其发酵成“老浆”，可以第二天使用。余下被排出的废水里还含有少量的淀粉，和废水里的粗纤维、蛋白质的沉淀物沉积在废水池里成为薯黄。把薯黄再过筛沉淀一次之后才能将淀粉提取干净，余下的薯黄可以和薯渣一样利用。
 
-　　整个淀粉车间的工序和工艺流程是罗铎搞得，但是投入生产之后大家才发觉这淀粉厂实在太费水了，排出来的废水又包含了大量的有机质成分，对文澜河污染很严重。以至于有一段河面淀粉车间一生产就会染成白呼呼的，象淘米水一样。田九九对此很是头疼，理论上，淀粉厂的废水可以用沼气池发酵的方式来处理，实际上事情远没有这么简单——毕竟这是一家工厂厂，不是个作坊。差不多每处理100公斤红薯就要消耗300公斤的水。废水的排放量是惊人的。田九九只好继续沿用沉淀池来进行初级处理，沉淀出来的高浓度废水再排入沼气池发酵，上层的较干净的废水直接排入河道。
+　　整个淀粉车间的工序和工艺流程是[罗铎][y011]搞得，但是投入生产之后大家才发觉这淀粉厂实在太费水了，排出来的废水又包含了大量的有机质成分，对文澜河污染很严重。以至于有一段河面淀粉车间一生产就会染成白呼呼的，象淘米水一样。田九九对此很是头疼，理论上，淀粉厂的废水可以用沼气池发酵的方式来处理，实际上事情远没有这么简单——毕竟这是一家工厂厂，不是个作坊。差不多每处理100公斤红薯就要消耗300公斤的水。废水的排放量是惊人的。田九九只好继续沿用沉淀池来进行初级处理，沉淀出来的高浓度废水再排入沼气池发酵，上层的较干净的废水直接排入河道。
 
 　　“这点污染程度在雨季文澜河的流量足以完成自净，到了旱季就很难说了。”
 
@@ -160,3 +160,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
