--- a/_posts/2010-12-1-3-22700.md
+++ b/_posts/2010-12-1-3-22700.md
@@ -46,13 +46,13 @@ tag: [normal]
 
 　　中国和西方在文字上的巨大差异，造成在秘密传送资料上的概念完全不同。中国古代更多的是使用切口和隐语。这种切口隐语张兴培略有所知，基本上是口口相传，和密码根本不是一码事。
 
-　　“赶快打电话给罗铎，叫他查中国古代密码资料！”
+　　“赶快打电话给[罗铎][y011]，叫他查中国古代密码资料！”
 
 　　“现在是半夜里，半夜打扰人家没公德啊——”张兴培对自己深夜被召见已经很不满了，借题发挥。
 
-　　“放心好了，这两脚书橱肯定在社工部办公室里。”林佰光对公德显然不感兴趣，而且他对罗铎的习惯很熟悉——此人的最大爱好就是搞资料，越到晚上他精神越好。
+　　“放心好了，这两脚书橱肯定在社工部办公室里。”林佰光对公德显然不感兴趣，而且他对[罗铎][y011]的习惯很熟悉——此人的最大爱好就是搞资料，越到晚上他精神越好。
 
-　　但是被叫来的罗铎也不能提供更多的料了——现在是半夜，他没法上大图书馆的计算机中心去检索，根据他有限的记忆，张兴培大体知道中国古代的军事密码主要是两种：一种是类似江湖“切口”的“隐语”，不过这隐语到底是如何使用的，现在已经查考不清了。
+　　但是被叫来的[罗铎][y011]也不能提供更多的料了——现在是半夜，他没法上大图书馆的计算机中心去检索，根据他有限的记忆，张兴培大体知道中国古代的军事密码主要是两种：一种是类似江湖“切口”的“隐语”，不过这隐语到底是如何使用的，现在已经查考不清了。
 
 　　还有一种则是所谓的“字验”。即把军中可能遇到的各种情况编成四十个项目，如：“请弓”、“请箭”、“请进军”、“请援兵”等等。然后联络双方约定用一首没有重复字的五言律诗作为“字验”，写属性的时候，将要报告的事情的项目编号，对应该首诗词里的第几字，然后在书信中的某字旁加一极好就可以。这样就算书信落入敌军之手，对方也知道这个办法，只要项目编号的底册没有泄露出来，就算知道是哪一首诗词也没有用处。
 
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　“实际上就是以字代意了，有意思，有意思。”张兴培陷入了深思。
 
-　　接着罗铎又开始介绍一种戚继光发明的建立在反切读音基础上的密码——这种密码已经很类似现代密码了，不过就他说得复杂程度来看，大家不觉得苟二会使用这么复杂的体系。实际上这种密码只是很短暂的在戚家军中使用过，并没有推广流传开。
+　　接着[罗铎][y011]又开始介绍一种戚继光发明的建立在反切读音基础上的密码——这种密码已经很类似现代密码了，不过就他说得复杂程度来看，大家不觉得苟二会使用这么复杂的体系。实际上这种密码只是很短暂的在戚家军中使用过，并没有推广流传开。
 
 　　张兴培拿了支笔，把这本账册全部抄写了下来，现在有一点可以肯定：就是这些不知所以然的三字词都是指代的人名，他拿这这抄本仔细地看着，几分钟之后，他就发现了一个突破口。
 
@@ -70,13 +70,13 @@ tag: [normal]
 
 　　“当然不是说他用了凯撒密码，但是原理差不多。”张兴培解释道：所谓的凯撒密码就是把就是明文中每个字母都被替换成一个不同的字母或者符号。根据记载：恺撒只是简单的把明文中的每个字母替换成了它后面3位的那个字母。
 
-　　“但是这不大可能吧。”罗铎立刻提出意义，“字母才多少个？中国常用字可就要八百多了。这个字表要多大的规模？苟二不得时刻揣着一本电码本那么厚的密码本了。”
+　　“但是这不大可能吧。”[罗铎][y011]立刻提出意义，“字母才多少个？中国常用字可就要八百多了。这个字表要多大的规模？苟二不得时刻揣着一本电码本那么厚的密码本了。”
 
 　　“这我就不清楚了。”张兴培摇摇头说，“不过从概率法里我大概能推断出几个姓氏。”
 
 　　他的思路很简单，既然这些都是人名，三字词的第一字必然是姓，既然是姓，就有个出现频率的问题。正如英文字母中出现最多的字母是e，中国人的姓也是有出现频率的，王、张、李、陈这些都是最常见的姓氏。虽然张兴培不知道大明的姓氏数量排位顺序，但是想来应该很现代不会差别太大。
 
-　　“你得考虑本地特色。”罗铎提醒他，“临高来说，符姓就是大姓，这里福建移民很多，林姓也很多。”
+　　“你得考虑本地特色。”[罗铎][y011]提醒他，“临高来说，符姓就是大姓，这里福建移民很多，林姓也很多。”
 
 　　“难点就在这里了，”张兴培说，他把出现最多的几个代姓的字单独提出来，反复的看来看去，就是不能入手。
 
@@ -97,3 +97,4 @@ tag: [normal]
 　　“不过只靠这样猜，准确度还是有限，而且一出临高，这套法子就用不准了。”慕敏说，“还是要找出字表来。”
 
 　　“容我慢慢来找，”张兴培说，“现在既然已经知道了几个字，就能猜猜看了。先从最普及的百家姓、三字经、千字文来来找——这三种，大明只要读过书的人都能背下来。”
+[y011]: /characters/y011 "罗铎"
