--- a/_posts/2010-12-7-3-23300.md
+++ b/_posts/2010-12-7-3-23300.md
@@ -74,7 +74,7 @@ tag: [normal]
 
 　　王兆敏对“浮收”这块含糊其辞，只是说这是用来支付粮赋的运费和损耗的。这笔收益，他当然不希望澳洲人知道的太明白了。
 
-　　邬德心想：难怪罗铎当时说，临高县的真正的税赋负担在一万五千石以上。照这么看来，完全有可能。
+　　邬德心想：难怪[罗铎][y011]当时说，临高县的真正的税赋负担在一万五千石以上。照这么看来，完全有可能。
 
 　　“本县的耗米，惯例是每石多少？”
 
@@ -89,3 +89,4 @@ tag: [normal]
 　　“难在何处？！”邬德抓住这个问题不放，
 
 　　王兆敏犹豫了一下，说：“银贵。”
+[y011]: /characters/y011 "罗铎"
