--- a/_posts/2010-3-10-2-14400.md
+++ b/_posts/2010-3-10-2-14400.md
@@ -64,14 +64,15 @@ tag: [normal]
 
 　　于是又商量了除夕放映的电影内容，[萧子山][y001]调出了资源目录，在充分考虑了大家的喜好和除夕的节日气氛之后，选定了三部不同的片子。
 
-　　罗铎正在广场上漫步，今天是除夕，他没有参加“临高一日游”。登陆这些天来，他凭借自己强大的人肉资料所引器功能，成功的混入了情报资料组。他在情报资料组的角色差不多是图书馆管理员，负责登记和查询各类资料。这份工作开始还让他有种身居要职的感觉——许多组长和执委都要请他查询资料，甚至还向他咨询各种建议。但是时间长久了这样的文案工作也不免乏味，就申请加入了民兵，平时不上班的时候带着枪巡逻放哨，算是一种调剂。其实他的真正目的是在年后的组织机构调整中调到将要成立的情报部门工作——自从看了《春天的十七个瞬间》他就很迷恋这些。除了现在日以继夜的查询学习相关资料之外，他相信自己目前在民兵服务的资历会在日后工作调整中增加一些砝码。
+　　[罗铎][y011]正在广场上漫步，今天是除夕，他没有参加“临高一日游”。登陆这些天来，他凭借自己强大的人肉资料所引器功能，成功的混入了情报资料组。他在情报资料组的角色差不多是图书馆管理员，负责登记和查询各类资料。这份工作开始还让他有种身居要职的感觉——许多组长和执委都要请他查询资料，甚至还向他咨询各种建议。但是时间长久了这样的文案工作也不免乏味，就申请加入了民兵，平时不上班的时候带着枪巡逻放哨，算是一种调剂。其实他的真正目的是在年后的组织机构调整中调到将要成立的情报部门工作——自从看了《春天的十七个瞬间》他就很迷恋这些。除了现在日以继夜的查询学习相关资料之外，他相信自己目前在民兵服务的资历会在日后工作调整中增加一些砝码。
 
 　　“注意啦，注意啦，”高音喇叭里传来了一个男人的声音，“晚上7点在百仞电影院放映除夕专场电影，不凭票进场。内有顶级猛片，少儿不宜，刚交上的女朋友不宜，欲推到的女朋友和老婆宜——”
 
 　　喇叭里忽然传来了怒吼声：“你胡扯什么！”接着便是一阵杂乱的声音，接着一切中断又是“恭喜恭喜恭喜你”的曲子了。
 
-　　这个插曲把他吓了一跳，大概是谁在恶作剧吧。不过放电影的事情他是听到了。至于会不会放A片，他倒不感兴趣——情报资料组里的电脑用电是不受配额限制的，想看多少电影都成。但是老看A片实在太空虚了：就算女优再多，叫得再淫荡，再怎么天使面孔魔鬼身材也毕竟是个虚幻的影像。怎么比得上活生生的女人呢？罗铎不由得又回忆起过去的交往的女友们了。
+　　这个插曲把他吓了一跳，大概是谁在恶作剧吧。不过放电影的事情他是听到了。至于会不会放A片，他倒不感兴趣——情报资料组里的电脑用电是不受配额限制的，想看多少电影都成。但是老看A片实在太空虚了：就算女优再多，叫得再淫荡，再怎么天使面孔魔鬼身材也毕竟是个虚幻的影像。怎么比得上活生生的女人呢？[罗铎][y011]不由得又回忆起过去的交往的女友们了。
 
-　　他盘算着年后分“生活秘书”的时候怎么给自己搞一个。有内部消息传出来：从广州买回来之后分到“卫生学校”学习的女人除了少数会转为专职护士之外，多数就要结业，之后就是分给大家做“生活秘书”了。当然这不会人人有份。而罗铎已经看中了里面一个叫“郭芙”的女孩子。
+　　他盘算着年后分“生活秘书”的时候怎么给自己搞一个。有内部消息传出来：从广州买回来之后分到“卫生学校”学习的女人除了少数会转为专职护士之外，多数就要结业，之后就是分给大家做“生活秘书”了。当然这不会人人有份。而[罗铎][y011]已经看中了里面一个叫“郭芙”的女孩子。
 [y001]: /characters/y001 "萧子山"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
