--- a/_posts/2010-3-11-2-14500.md
+++ b/_posts/2010-3-11-2-14500.md
@@ -20,11 +20,11 @@ tag: [normal]
 
 　　随着“首长”们在看前所未见的“影戏”的消息传出去，住在百仞公社里的职工和家属都纷纷跑过来。他们不敢走到里面坐在台阶上看，但是电影院是敞开式的，站在外围也能看得很清楚。
 
-　　罗铎悄悄得跑到贵宾席上，里面除了[萧子山][y001]之外，还坐着[马千瞩][y005]和其他一些执委，[文德嗣][y002]和另外一些执委则不在场——根据保护政要的一贯做法，是[萧子山][y001][马千瞩][y005]一拨人看前半场，然后才轮到[文德嗣][y002]等人看后半场。不全体同时在场。
+　　[罗铎][y011]悄悄得跑到贵宾席上，里面除了[萧子山][y001]之外，还坐着[马千瞩][y005]和其他一些执委，[文德嗣][y002]和另外一些执委则不在场——根据保护政要的一贯做法，是[萧子山][y001][马千瞩][y005]一拨人看前半场，然后才轮到[文德嗣][y002]等人看后半场。不全体同时在场。
 
 　　“马委员，电影院周围来了不少职工和家属，数量相当多，我们要不要多动员一些民兵过来警备？”
 
-　　罗铎因为对看电影兴趣不大，就自告奋勇的当了今天的百仞城警卫值星官。
+　　[罗铎][y011]因为对看电影兴趣不大，就自告奋勇的当了今天的百仞城警卫值星官。
 
 　　[马千瞩][y005]皱了下眉：“不用了吧，他们都是来看电影的，不用那么紧张。”
 
@@ -32,9 +32,9 @@ tag: [normal]
 
 　　“没关系，既然是职工，应该都是信得过的人。”
 
-　　“那好。”罗铎正在出去，[萧子山][y001]叫住了他：“动员民兵就不要了，你给执勤的民兵多准备些4号催泪弹。”
+　　“那好。”[罗铎][y011]正在出去，[萧子山][y001]叫住了他：“动员民兵就不要了，你给执勤的民兵多准备些4号催泪弹。”
 
-　　“好，我这就去办。”罗铎用一种领导最喜欢的麻利爽快的语气应着，看到[马千瞩][y005]没有反对，才走了出去。
+　　“好，我这就去办。”[罗铎][y011]用一种领导最喜欢的麻利爽快的语气应着，看到[马千瞩][y005]没有反对，才走了出去。
 
 　　银幕上卡丽.安.摩丝正在空中飞舞，[马千瞩][y005]说：“你对这些算是自己人的土著还这么戒备，以后本地化进程还怎么搞。”
 
@@ -52,13 +52,13 @@ tag: [normal]
 
 　　“土人看电影好像很起劲么。”邬德因为知道许多公社里的社员都到电影院去蹭电影看了，怕发生什么问题，也赶来巡视，看到他们一个个都张大了嘴巴看得入神的模样，有些惊讶。
 
-　　“他们看得明白这放得是什么？”罗铎有点疑惑。
+　　“他们看得明白这放得是什么？”[罗铎][y011]有点疑惑。
 
 　　“别说他们，我都没搞懂黑客帝国。”邬德说，“不过这些土著百姓就是纯粹看热闹而已。”
 
 　　“是啊，他们连普通话都听不懂吧，好歹这还是李亚鹏的国语配音。”
 
-　　罗铎无意的一句话，倒引起了邬德的想法，看这样子，电影对当地人是极有吸引力的。如果用电影作为教授普通话的媒介，岂不是一举两得？眼下公社里由张兴教牵头，每天晚上开夜校，讲授普通话，但是收效不大，多数当地劳工意识到要在“首长”这里混好，就得学会“首长”的语言，但是明代的临高话、福建话和广东话与21世纪的普通话毕竟差别太大，词语短句还行，想要无障碍的交流就很难了。
+　　[罗铎][y011]无意的一句话，倒引起了邬德的想法，看这样子，电影对当地人是极有吸引力的。如果用电影作为教授普通话的媒介，岂不是一举两得？眼下公社里由张兴教牵头，每天晚上开夜校，讲授普通话，但是收效不大，多数当地劳工意识到要在“首长”这里混好，就得学会“首长”的语言，但是明代的临高话、福建话和广东话与21世纪的普通话毕竟差别太大，词语短句还行，想要无障碍的交流就很难了。
 
 　　这个主意不错，邬德思量着，该给他们看些什么片子比较好？
 
@@ -128,3 +128,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y011]: /characters/y011 "罗铎"
