--- a/_posts/2010-3-14-2-14800.md
+++ b/_posts/2010-3-14-2-14800.md
@@ -50,7 +50,7 @@ tag: [normal]
 
 　　“放心，要吃橘子就快来吧。”
 
-　　新军的联欢会场设在操场上，这就充分体现出海南天气温暖的好处来了。居中生起一堆火来，营房的墙壁上还贴了不少红色的春联、年画之类。除了已经睡觉的人之外，士兵们都围坐在火堆边。场地里的军官只有东门吹雨和游老虎两个，魏爱文还意外的发现了罗铎，他戴着警卫值星官的袖标，身上背着枪。士兵们都嗑着瓜子，啃着地瓜条干，吃橘子，在开心的听王涛说书。
+　　新军的联欢会场设在操场上，这就充分体现出海南天气温暖的好处来了。居中生起一堆火来，营房的墙壁上还贴了不少红色的春联、年画之类。除了已经睡觉的人之外，士兵们都围坐在火堆边。场地里的军官只有东门吹雨和游老虎两个，魏爱文还意外的发现了[罗铎][y011]，他戴着警卫值星官的袖标，身上背着枪。士兵们都嗑着瓜子，啃着地瓜条干，吃橘子，在开心的听王涛说书。
 
 　　东门吹雨看见魏爱文来了，丢了一个橘子给他：“你也来啦？欢迎！欢迎！”
 
@@ -174,3 +174,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
