--- a/_posts/2010-3-7-2-14100.md
+++ b/_posts/2010-3-7-2-14100.md
@@ -72,7 +72,7 @@ tag: [normal]
 
 　　“他要是和海瑞那么耿直得不近人情，俺们就非得搞点暴力手段了。”[文德嗣][y002]说，“幸好他不是，这就好办多了。等着吧。”
 
-　　果然，第二天黄昏时分。文水桥畔的检查站里就来了一个鬼鬼祟祟的人，他找哨兵说要见“短毛的大官”，检查站里的负责人罗铎不敢怠慢，赶紧打电话到执委会。
+　　果然，第二天黄昏时分。文水桥畔的检查站里就来了一个鬼鬼祟祟的人，他找哨兵说要见“短毛的大官”，检查站里的负责人[罗铎][y011]不敢怠慢，赶紧打电话到执委会。
 
 　　来人被带到僻静的治安组的房子里，一番盘问之后知道此人是张有福的佣人，想请短毛的大官赴宴。
 
@@ -91,3 +91,4 @@ tag: [normal]
 　　张有福虽然号称是个地主，实际上是个破落户，所谓的庄子，不过是一处大院落而已，自己住五间正房，长工、佣人们住下房，沿墙还有些牲口棚。但是墙修得很高，而且看得出是砖石砌成的，大门是用包着铁皮的厚木板做的，这都是为了御匪盗。
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y011]: /characters/y011 "罗铎"
