--- a/_posts/2010-4-18-2-18300.md
+++ b/_posts/2010-4-18-2-18300.md
@@ -30,13 +30,13 @@ tag: [normal]
 
 　　“会不会负担太重？”[文德嗣][y002]看到这个数字，有些觉得太大了。
 
-　　“的确比较大。”罗铎说。他已经如愿以偿的调到了政治保卫总署社工部。这个部门专管收集搜集、整理、分析从各个渠道收集来的当地社会民情，撰写《社情通报》。
+　　“的确比较大。”[罗铎][y011]说。他已经如愿以偿的调到了政治保卫总署社工部。这个部门专管收集搜集、整理、分析从各个渠道收集来的当地社会民情，撰写《社情通报》。
 
 　　“虽然临高的粮赋是七千多石，当地百姓真正的负担，大约在一万五千石以上。”他把自己潜心研究了好些天的数字报了出来。
 
 　　“这么多？！”执委会众人都吃了一惊。
 
-　　罗铎点点头：“可能还不止。明清二代的赋税都有很大的浮收，这是公开的秘密。什么踢尖淋斛、火耗这些是大家都知道的，其实里面的弊端多如牛毛。所以说，即使我们再把派粮水平降低，对各村寨来说还是相当沉重的负担。”
+　　[罗铎][y011]点点头：“可能还不止。明清二代的赋税都有很大的浮收，这是公开的秘密。什么踢尖淋斛、火耗这些是大家都知道的，其实里面的弊端多如牛毛。所以说，即使我们再把派粮水平降低，对各村寨来说还是相当沉重的负担。”
 
 　　南海说：“其实这个派粮不要也罢，本月农场就要开始大规模种杂交水稻了，先种1000亩下去，虽说肥料和农药条件差些，但是本地一年能三熟，就算只两熟，一年收500-600吨大米是轻轻松松的。派粮对农民的压力太大了，我们既然要拉拢民众，就不能太压迫他们了。”
 
@@ -99,3 +99,4 @@ tag: [normal]
 　　“现在，我们获得了一个绝佳的喘息机会。”[马千瞩][y005]在执委会的总结会议上说道，“抓住机遇，尽快完成工农业的产业升级是现在最要紧的任务。下面的议题是：临高的第一个五年计划。”
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y011]: /characters/y011 "罗铎"
