--- a/_posts/2010-4-22-3-00400.md
+++ b/_posts/2010-4-22-3-00400.md
@@ -20,7 +20,7 @@ tag: [normal]
 
 　　“也是，上岸这么久我还真没看到过椰子。”
 
-　　“海南岛的原生椰子分布不在这里，”罗铎说，“都在中南部地区，可以派遣船队去采摘或者收购”
+　　“海南岛的原生椰子分布不在这里，”[罗铎][y011]说，“都在中南部地区，可以派遣船队去采摘或者收购”
 
 　　“直接在东门市收购椰子干不行吗？”
 
@@ -123,3 +123,4 @@ tag: [normal]
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
