--- a/_posts/2010-4-24-3-00600.md
+++ b/_posts/2010-4-24-3-00600.md
@@ -24,7 +24,7 @@ tag: [normal]
 
 　　“拿不管是哪个时空的临高来做例子是没什么意义的，”[文德嗣][y002]说，“正如对那些改革开放初期期望在中国能够‘每个中国人买我一样东西’就能发财的外国资本家一样。百分之九十的中国人还是不会买他的东西。消费能力自古至今是只集中在大城市里的。我们的地位其实和这些资本家是一样的。市场看似广大，但是我们只能挑选那些有能力的地区去销售。广东、江南、京师才是我们商品的销售市场——其他地方就自动忽略好了，中原和西北的老百姓连当太平狗都没门，不会来消费我们的产品。”
 
-　　罗铎说：“这些地方就自动过滤好了，只谈[文总][y002]说的可能的目标吧！没有厘金，商品流通性就好么？根本问题是老百姓没有钱，他拿什么来消费？这跟消费习惯没关系，没钱自然要节省。之所以不消费，还是一个字：穷！”
+　　[罗铎][y011]说：“这些地方就自动过滤好了，只谈[文总][y002]说的可能的目标吧！没有厘金，商品流通性就好么？根本问题是老百姓没有钱，他拿什么来消费？这跟消费习惯没关系，没钱自然要节省。之所以不消费，还是一个字：穷！”
 
 　　“我看未必：看本地的地主就知道了。再怎么一个土财主，其实顿顿吃细粮、吃肉都没问题的。但是消费水准呢？多数地主平常还经常吃番薯粥。肉也是逢年过节才吃。”
 
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　[马千瞩][y005]说：“不要人身攻击。有论点谈论点，大家围绕问题谈。”
 
-　　“我也赞同罗铎的说法，还是要从经济角度入手来看消费习惯。”[吴南海][y009]说话了，“有钱了自然会消费，还要找消费习惯。每天愿意多等半小时时间，只为了那一块钱车票的公车。这样的家长往往却愿意花上千块钱为孩子报名补一个所谓的艺术学习班。”
+　　“我也赞同[罗铎][y011]的说法，还是要从经济角度入手来看消费习惯。”[吴南海][y009]说话了，“有钱了自然会消费，还要找消费习惯。每天愿意多等半小时时间，只为了那一块钱车票的公车。这样的家长往往却愿意花上千块钱为孩子报名补一个所谓的艺术学习班。”
 
 　　“不然，不然。经济条件只是一个因素。比如大家都觉得卖肥皂是个方向。其实无论是自家用还是帮佣的，亲手用到肥皂的基本都是下层劳动人民。而这种节俭的习惯往往并非出自某种责任心，而是纯粹的习惯使然——纵使是在洋人宅里帮佣的，也会习惯成自然地为主人作不必要的节约。”
 
@@ -79,3 +79,4 @@ tag: [normal]
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
