--- a/_posts/2010-4-3-2-16800.md
+++ b/_posts/2010-4-3-2-16800.md
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　“我提议仿造中华人民共和国1956年体制采用行政24级的方式进行定级。有了行政级别，军队的军官军衔问题也能确定了！”[马千瞩][y005]继续说道，“这个体系下的好处是级别与级别之间差别不大，最大的级差50元，最小的级差才5元。而且各项津贴、补助、奖励之类的待遇问题也能确定下来。我们现在有办公厅了，没个级别，大家的生活待遇问题搞不好——”
 
-　　“这个24级最高590元，最低45元，你让一线的穿越者拿45元？不把你活吃了才怪。”罗铎立马反对，此人对这些东西倒背如流。
+　　“这个24级最高590元，最低45元，你让一线的穿越者拿45元？不把你活吃了才怪。”[罗铎][y011]立马反对，此人对这些东西倒背如流。
 
 　　“穿越者当然不按最低级别，”[马千瞩][y005]对这个问题显然有所考虑，“穿越者都是宝贵的财富，可以安排一个最低的起始级别，比如至少在12级起评……”
 
@@ -104,3 +104,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y011]: /characters/y011 "罗铎"
