--- a/_posts/2010-4-7-2-17200.md
+++ b/_posts/2010-4-7-2-17200.md
@@ -126,7 +126,7 @@ tag: [normal]
 
 　　根据日本人的经验，用作竹筋的竹子，最好是从是山区里和杉树等树木混生的里采伐的竹子，竹竿高且直，竹节短，壁肉薄，弹性好。采伐的时间，要放在干燥无月的夜晚进行，因为月夜采收的竹子含有较多水分，竹汁有甜味，易遭虫蛀。
 
-　　竹子的采伐年龄选5～6年的，过短的太柔软，过长则逐渐失去了油性，弹性不足。甚至采伐本身也有一定的技术要领。看到罗铎从大图书馆里找来的资料。梅晚苦笑着对梅林说：“这玩意可一点都不省事。”
+　　竹子的采伐年龄选5～6年的，过短的太柔软，过长则逐渐失去了油性，弹性不足。甚至采伐本身也有一定的技术要领。看到[罗铎][y011]从大图书馆里找来的资料。梅晚苦笑着对梅林说：“这玩意可一点都不省事。”
 
 　　梅林心里也没谱，眼见这本竹筋砼手册如此之厚实，心里发虚，深怕搞起来过于复杂自己成为始作俑者。但是工作既然已经展开，就不能下软蛋，只好做出信心百倍的模样：
 
@@ -140,3 +140,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
 [y156]: /characters/y156 "李潇侣"
+[y011]: /characters/y011 "罗铎"
