--- a/_posts/2010-7-25-3-09800.md
+++ b/_posts/2010-7-25-3-09800.md
@@ -88,7 +88,7 @@ tag: [normal]
 
 　　“现在，请情报委员会通知报临高匪情。”
 
-　　罗铎站了起来，打开了手里一本厚厚的文件夹子。
+　　[罗铎][y011]站了起来，打开了手里一本厚厚的文件夹子。
 
 　　“同志们，你们面前的小册子是我们社工部对临高匪情的综合调查报告。”
 
@@ -98,7 +98,7 @@ tag: [normal]
 
 　　临高的匪患非常严重。古代社会官府对地方的控制力很弱。稍微偏远一些的地方往往就有土匪活动。就算是号称盛世的康乾年间，离开京师不过百把里的妙峰山地区就有大股的土匪的山寨。临高地处边陲，长期地广人稀，不论是官府和地方上的士绅，维持社会治安的力量都很有限。这使得土匪活动异常的猖獗。
 
-　　罗铎说：“根据我们的调查得知：全县长期活动的五十人以上的匪股有三十八股；一百人以上的七股，还不包括许多平时种地，有时做匪的家居土匪。”
+　　[罗铎][y011]说：“根据我们的调查得知：全县长期活动的五十人以上的匪股有三十八股；一百人以上的七股，还不包括许多平时种地，有时做匪的家居土匪。”
 
 　　这个数字引起了人群的一阵骚动。要知道临高的实际人口，根据民政部门的估算，大约在七八万人左右。不到十万的人的县居然有这么多的土匪！
 
@@ -107,3 +107,4 @@ tag: [normal]
 　　穿越众想要在临高推行社会调查，进行民政、农业方面的改革，没有一个稳定的社会秩序是不可能的。不能想象穿越者每个工作队下乡都要安排大量的武力进行护送。随后要开展建设的各种基础设施总不能沿线都修上炮楼，让士兵进行站岗保卫。
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
