--- a/_posts/2010-7-26-3-09900.md
+++ b/_posts/2010-7-26-3-09900.md
@@ -22,7 +22,7 @@ tag: [normal]
 
 　　“向来剿匪都是首恶必办，胁从不究。”王兆敏道，“宽严相济四个字不可不知。”
 
-　　“是，是，”罗铎只管称是就是，又问，“为什么说这股最难对付？”给他斟满一杯酒，“请先生教我。”
+　　“是，是，”[罗铎][y011]只管称是就是，又问，“为什么说这股最难对付？”给他斟满一杯酒，“请先生教我。”
 
 　　“说来话长。”王兆敏已经有些微微的熏然，实际脑子非常清醒。他知道这群澳洲人的用意，多半是要清理“卧榻之侧”了，不过这也好，反正官府既对付不了土匪也消灭不了澳洲人，让他们互相去撕咬，说不定还收个渔人之利呢。便装着已经喝醉的样子说开了：
 
@@ -36,27 +36,27 @@ tag: [normal]
 
 　　“就说他打龙波寨吧，”王兆敏说得兴起，“党那门带着几十个人，装成赶集的农民，带着货物进了龙波寨。借着去向市集缴税的机会混进团局，几个人把门，几个人在外面放鞭炮。他带人冲进去就把团局里的乡勇教师给杀了。乡勇乱了阵脚，有一百多乡勇的龙波寨就给他带的三十个人破了。你说厉害不厉害。”
 
-　　罗铎点点头，这党那门果然有点小伎俩。这手里应外合，打蛇打头的战术还是相当的漂亮。难怪王师爷要说党那门这股土匪厉害了。
+　　[罗铎][y011]点点头，这党那门果然有点小伎俩。这手里应外合，打蛇打头的战术还是相当的漂亮。难怪王师爷要说党那门这股土匪厉害了。
 
 　　“而且他还知道笼络人心这条！”王师爷轻敲桌面，“这党那门在外面一贯鼓吹‘打富不打穷’，很是吸引了一班无知的愚民。闹得加来、美台几个地方的村民都抗租不交，田主们叫苦不迭。每每到县衙来告状。总算几年前黄老爷帮忙，带勇重创了党那门一伙，他们的气焰才没这么嚣张了。”
 
 　　“黄老爷？”
 
-　　“就是黄家寨的黄守统，黄老爷。”王兆敏注意到了罗铎的反应，“他带的勇十分强悍，党那门不是对手。可惜乡民无知，多有为期掩盖匿踪的，最后还是让他跑回抱庞山去了，竟不能全功！真是遗憾啊……”
+　　“就是黄家寨的黄守统，黄老爷。”王兆敏注意到了[罗铎][y011]的反应，“他带的勇十分强悍，党那门不是对手。可惜乡民无知，多有为期掩盖匿踪的，最后还是让他跑回抱庞山去了，竟不能全功！真是遗憾啊……”
 
 　　“这么说黄老爷还是位急公好义的人了。”
 
 　　“自然，自然，”王兆敏隐约已经知道澳洲人想在本地扎根，但是黄家寨的乡勇是吴县令唯一可以依靠的一支力量，不能让澳洲人以剿匪的名义拉过去或者消耗掉，“可惜黄老爷上次受了伤，身体一直不好。剿匪的事情，怕是帮不上忙了。”
 
-　　罗铎不置可否，只是点头而已。
+　　[罗铎][y011]不置可否，只是点头而已。
 
-　　“……根据情报，党那门匪伙，主要盘踞在临儋交界的抱庞山地区，这是他们的老营。”罗铎拿着一根教鞭，指点着地图做介绍，“寨子里的匪伙，常年有三百人以上。有火器。”
+　　“……根据情报，党那门匪伙，主要盘踞在临儋交界的抱庞山地区，这是他们的老营。”[罗铎][y011]拿着一根教鞭，指点着地图做介绍，“寨子里的匪伙，常年有三百人以上。有火器。”
 
-　　下面的军官们聚精会神地看着地图上的标记。罗铎继续道：“但是他们的根据地是在加来、美台交界的‘十三村’地区，不管是补给还是人员，都从这一带获得补充。一旦有事，就能从这里再拉起四五百人的队伍。”
+　　下面的军官们聚精会神地看着地图上的标记。[罗铎][y011]继续道：“但是他们的根据地是在加来、美台交界的‘十三村’地区，不管是补给还是人员，都从这一带获得补充。一旦有事，就能从这里再拉起四五百人的队伍。”
 
 　　人群中发出一阵小声的议论。有人提了出来：“这不等于是洪洞县里无好人，这一地区的丁壮都有当土匪的嫌疑了？”
 
-　　“是这样的。”罗铎点点头，“党那门匪伙对这一地区视为自己的禁脔，自己从不祸害，而且也不许其他匪祸侵扰，很得人心。”
+　　“是这样的。”[罗铎][y011]点点头，“党那门匪伙对这一地区视为自己的禁脔，自己从不祸害，而且也不许其他匪祸侵扰，很得人心。”
 
 　　“等于是割据势力了！”
 
@@ -66,21 +66,21 @@ tag: [normal]
 
 　　“这次开政协会议，‘十三村’地区来参加会议了吗？”何鸣问。
 
-　　罗铎说：“都来过。我查了会议上的相关记录，代表们没有发言，基本就是随大流而已。征粮、派差、派联络员全部都应承做到。”
+　　[罗铎][y011]说：“都来过。我查了会议上的相关记录，代表们没有发言，基本就是随大流而已。征粮、派差、派联络员全部都应承做到。”
 
 　　“党那门很懂斗争策略么。”
 
-　　“是这样的。”罗铎很谨慎地回答道，“在斗争的策略上，很有些思路。”
+　　“是这样的。”[罗铎][y011]很谨慎地回答道，“在斗争的策略上，很有些思路。”
 
 　　“党那门团伙多数是穷苦百姓，他自己也是受迫害的穷人出身。又知道‘打富不打穷’，应该算是有革命觉悟的。”有人说了，“其实定性他们是土匪不对吧？应该是自发的农民反抗组织。我们可以争取啊。”
 
-　　“不扰民是相对的。”罗铎说，“只是十三村地区稍好，但是其他地方侵扰很的很厉害。”诸如抢劫、杀人、绑票、强抢民女之类的事情，这个土匪团伙一样不少全都干过。祸害的也不止是富人，穷人一样倒霉。非要说成什么“农民反抗”或者“起义”，就是在自欺欺人。
+　　“不扰民是相对的。”[罗铎][y011]说，“只是十三村地区稍好，但是其他地方侵扰很的很厉害。”诸如抢劫、杀人、绑票、强抢民女之类的事情，这个土匪团伙一样不少全都干过。祸害的也不止是富人，穷人一样倒霉。非要说成什么“农民反抗”或者“起义”，就是在自欺欺人。
 
 　　何鸣解释说：“剿匪指挥部之所以选择拿他们第一个开刀，一是他们的势力最大，打掉有敲山震虎的作用；二是这伙人民愤极大。我们师出有名。”
 
-　　罗铎接着说，“‘十三村’地方上，这个匪伙有两个重要党羽带着二三十人常驻以控制局面，头目名叫忻那日、王五术。”
+　　[罗铎][y011]接着说，“‘十三村’地方上，这个匪伙有两个重要党羽带着二三十人常驻以控制局面，头目名叫忻那日、王五术。”
 
-　　“忻那日和王五术，是党那门手下的四大天王里的两个。”王兆敏对罗铎说道，“所谓的四大天王，不过是凑数罢了，但是这这两个人不可小觑。”
+　　“忻那日和王五术，是党那门手下的四大天王里的两个。”王兆敏对[罗铎][y011]说道，“所谓的四大天王，不过是凑数罢了，但是这这两个人不可小觑。”
 
 　　忻那日自小就是游手好闲之辈，成年之后因为好逸恶劳，巴结上了县衙里的“快手”，当了一个“做公的”。“做公的”并不是县衙里的正式衙役，类似编外的“临时工”，收入全凭各种陋规和敲诈勒索。衙役不便出面的非法勾当就由这些人出面。万一出了事情就由这些人顶罪，好在内外都有勾连，重拿轻放，就是县令也没法子。风头一过，继续当“做公的”。
 
@@ -90,7 +90,7 @@ tag: [normal]
 
 　　至于王五术，虽然不是什么头脑灵活之辈，但是极是蛮横凶残，出了名的杀人不眨眼。他自小习武，颇有些排打硬功，少时参与殴斗，被人刀砍不死，枪扎不伤，很有传奇色彩。这一文一武常驻“十三村”地界，把这一带控制得很严密。
 
-　　罗铎介绍完基本情况之后，与会者就如何清剿这股土匪进行了讨论。方案基本上分为两种，一种是先打“十三村”，把土匪势力清除出去，使得山上的土匪失去粮食和人员的补给，不打自乱，时机成熟之后再围攻山寨。
+　　[罗铎][y011]介绍完基本情况之后，与会者就如何清剿这股土匪进行了讨论。方案基本上分为两种，一种是先打“十三村”，把土匪势力清除出去，使得山上的土匪失去粮食和人员的补给，不打自乱，时机成熟之后再围攻山寨。
 
 　　另一种则是擒贼擒王的思路，主张先攻抱庞山地区，消灭匪巢，然后再迫使十三村的土匪不战而降。
 
@@ -103,3 +103,4 @@ tag: [normal]
 　　第一步兵团团属猎兵连一排排长杨增正在山间行军，晚春的林间十分的闷热，汗水已经浸透了军服。他肩膀上背着心爱的步枪，身上还带着二百发子弹。
 
 　　他的身后，跟随着自己的猎兵排，然后是一门山地榴弹炮和它的全部家当：炮弹、火药、炮刷等等，这些七零八碎的装备全部由人来运送，整整用了四十名“教育兵”——还没有正式授予列兵军衔，正在受训的士兵。在他们之后，是一个步兵连，然后又是一百多名教育兵，背着大量的辎重装备。名为“军工”实际就是席亚洲搞的“代畜输卒”，新兵派不上太大用处，背东西总是可以的。殿后的则是工兵排，由工兵连连长潘达亲自带领。
+[y011]: /characters/y011 "罗铎"
