--- a/_posts/2010-8-9-3-11300.md
+++ b/_posts/2010-8-9-3-11300.md
@@ -98,17 +98,17 @@ tag: [normal]
 
 　　吴石芒边忙于搞基建工作，边从大图书馆搞了不少宗教书籍开始研读——不然陆若华一回来，他这个“修道院长”什么也不懂岂不是露馅。而且今后对教义的修正和确立，都要拿出方案来。
 
-　　“帮我找些图片吧。”吴石芒找到了人肉搜索机罗铎。
+　　“帮我找些图片吧。”吴石芒找到了人肉搜索机[罗铎][y011]。
 
 　　“什么图片？”
 
 　　“基督教图片，宣传画之类的，”吴石芒想了想，“最好要本地化的那种。”
 
-　　“本地化——”罗铎想了想，“是不是人物都是用中国式造型的。”
+　　“本地化——”[罗铎][y011]想了想，“是不是人物都是用中国式造型的。”
 
 　　“对，就是那种，西式的也可以，不过最好特征不要太明显了。画成金黄色头发的就不要了。小耶稣可以不用本地化，白白胖胖的洋娃娃肯定讨人喜欢。”
 
-　　罗铎一番查询，倒是找出不少来，吴石芒选了一些比较好看的，又去找了穿越者里会画画的，重新给描绘了一番，画了不少画。
+　　[罗铎][y011]一番查询，倒是找出不少来，吴石芒选了一些比较好看的，又去找了穿越者里会画画的，重新给描绘了一番，画了不少画。
 
 　　从政治保卫总署也派来了二名年轻的土著人员。他们是从广东收容的孤儿中的两员。性格比较内向，在经受了充分的洗脑之后，领受了任务，准备等陆若华一回来就参加慕道学习，然后受洗，进修院。
 
@@ -142,3 +142,4 @@ tag: [normal]
 
 　　原本他还想建议卫生部门，可以澳门通过教会或者商人招募一些欧洲的医生来，来个吸收当地经验。现在看起来这是多此一举。陆若华显然在欧洲也是一知识分子了，如果知识分子都是信任这种医学调调，1629年的西医还是敬谢不敏的比较好。
 [y002]: /characters/y002 "文德嗣"
+[y011]: /characters/y011 "罗铎"
