--- a/_posts/2010-9-27-3-16200.md
+++ b/_posts/2010-9-27-3-16200.md
@@ -10,17 +10,17 @@ tag: [normal]
 
 　　施加草木灰也能补充磷肥，但是依然牵扯到一个问题：数量不够。
 
-　　一群人苦思冥想了半天，最后决定打电话给罗铎。
+　　一群人苦思冥想了半天，最后决定打电话给[罗铎][y011]。
 
-　　罗铎现在在政治保卫署社会部每天搞黑材料，生活过得很充实，不过他还在工作之余每天还继续充当活人字典的角色。
+　　[罗铎][y011]现在在政治保卫署社会部每天搞黑材料，生活过得很充实，不过他还在工作之余每天还继续充当活人字典的角色。
 
 　　[吴南海][y009]的问题是：如何在没有磷矿石的情况下制造磷肥？
 
-　　“这个容易啊。”罗铎说，“水煮草木灰……”
+　　“这个容易啊。”[罗铎][y011]说，“水煮草木灰……”
 
 　　“这我知道，动物骨头我也知道，不过我要给1500亩严重缺磷的土地施肥。”
 
-　　“找冶金部门要钢渣吧。”罗铎说，“我记得他们用的是小转炉吧？正合适。”他接着说：“钢渣混合石灰，可以得到一种土磷肥。”
+　　“找冶金部门要钢渣吧。”[罗铎][y011]说，“我记得他们用的是小转炉吧？正合适。”他接着说：“钢渣混合石灰，可以得到一种土磷肥。”
 
 　　转炉炼钢中的造渣工艺，是通过沙子来制造酸性炉渣，置换出生铁中的磷。所以转炉炉渣中含有相当多的磷元素。
 
@@ -107,3 +107,4 @@ tag: [normal]
 　　整座岛地势东北部稍高，西南部稍低，中部低洼，平均海拔大约有五六米。最高的是东北部有十来米高。整个岛屿呈四周高中间低形态。中部低地就是淤浅的泻湖，约占全岛三分之一面积，湖口向西开口。
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
