--- a/_posts/2011-2-11-3-29900.md
+++ b/_posts/2011-2-11-3-29900.md
@@ -66,7 +66,7 @@ tag: [normal]
 
 　　“这可不一定。”[王洛宾][y003]说，“去过海口你就知道了，那里最赚钱的门道之一就是在南渡江上的采砂。河道淤积是相当严重的。河面上的沙洲多如牛毛，看着河面宽，水深倒不一定大。”
 
-　　罗铎说：“南渡江下游平均水深大约有2米，这个深度不算小了——不过这是现代修建松涛水库之后的水深。南渡江和文澜河有一样的特点：旱季雨季水量差得很大，不过常年平均1米左右的水深应该是有的，走三五十吨级别的船大概没问题。”
+　　[罗铎][y011]说：“南渡江下游平均水深大约有2米，这个深度不算小了——不过这是现代修建松涛水库之后的水深。南渡江和文澜河有一样的特点：旱季雨季水量差得很大，不过常年平均1米左右的水深应该是有的，走三五十吨级别的船大概没问题。”
 
 　　“既然我们现在缺钢材，南渡江也没经过航道整治，按照明代漕运船的标准，造个木结构平底船，排水量31吨，载重15吨的货船应该可以吧？吃水好像只有0.75米。”周比利说。
 
@@ -82,3 +82,4 @@ tag: [normal]
 
 　　南渡江下游现在的水深是相当的可观，平均有5米深，最深的地方达到12米。这都是采砂的结果。南渡江上迟到2000年还没有成规模的航运业。
 [y003]: /characters/y003 "王洛宾"
+[y011]: /characters/y011 "罗铎"
