--- a/_posts/2011-2-12-3-30000.md
+++ b/_posts/2011-2-12-3-30000.md
@@ -22,13 +22,13 @@ tag: [normal]
 
 　　最后的讨论结果是立马开工仿制小型蒸汽机，造小型驳船。另外在甲子煤矿搞个选矿厂。
 
-　　这是罗铎的提议。既然现在的运力吃紧，何不来个逆向思维。
+　　这是[罗铎][y011]的提议。既然现在的运力吃紧，何不来个逆向思维。
 
 　　“汤梦龙给工能委的报告明确说，褐煤的含量只占到了40％，而且里面还有一部分是不适合炼焦。产能中煤矸石和其他低热值煤占了多数，不如先选再运，只把适合炼焦的褐煤运出来，其他的都暂时丢在甲子煤矿好了，反正本时空有的是荒地。”
 
 　　“其实煤矸石的用处也不少，起码能烧水泥……”
 
-　　“比起水泥，还是炼焦更要紧吧。”罗铎说，“再说以后占领琼山之后可以就地开发利用，没必要一股脑都拉到临高来污染环境。”
+　　“比起水泥，还是炼焦更要紧吧。”[罗铎][y011]说，“再说以后占领琼山之后可以就地开发利用，没必要一股脑都拉到临高来污染环境。”
 
 　　“干吗不直接在甲子矿炼焦，博铺那边的开滦式焦炉我看过，结构简单的很，没啥技术含量。”
 
@@ -78,3 +78,4 @@ tag: [normal]
 [y003]: /characters/y003 "王洛宾"
 [y004]: /characters/y004 "展无涯"
 [y005]: /characters/y005 "马千瞩"
+[y011]: /characters/y011 "罗铎"
