--- a/_posts/2011-4-9-3-35600.md
+++ b/_posts/2011-4-9-3-35600.md
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　“原来是林佰光负责的，他现在已经调到对外情报局去了。”乌佛介绍说，敌工部的元老实际上只有他一个，土著工作人员也寥寥无几，他调走之后，整个敌工部就无人负责了。
 
-　　编制表上另一个无人负责的部门是社会工作部，原来由罗铎负责的，但是他长期被大图书馆借用不到岗。
+　　编制表上另一个无人负责的部门是社会工作部，原来由[罗铎][y011]负责的，但是他长期被大图书馆借用不到岗。
 
 　　赵曼熊点点头，这保卫总局的编制很全，但是存在许多缺额。冉耀为什么不把职位都填补起来？要说缺少专业人员，穿越集团本来就没多少堪称是这方面的专业人员。
 
@@ -93,3 +93,4 @@ tag: [normal]
 　　另设办公室作为局长直接领导的部门，分管：总局全部行政事务；保管秘密文件及搜获的证物，进行秘密交通。
 
 　　这个组织架构上报之后很快得到了冉耀的批准，为慎重起见，他还专门抄报给全体执委。执委们全部在抄件上画了圈，无人提出反对的意见。
+[y011]: /characters/y011 "罗铎"
