--- a/_posts/2012-4-23-5-11700.md
+++ b/_posts/2012-4-23-5-11700.md
@@ -44,7 +44,7 @@ tag: [normal]
 
 　　屏东、高雄以南是山区，以北是荷兰人的势力。目前荷兰人和元老院有商业协议，双方保持着一种“和平”的商业合作关系。荷兰人即无实力，也不敢冒着得罪大供货商的危险来攻打屏东、高雄的中转基地。荷兰人还可以起到隔离郑芝龙的作用。况且以郑芝龙目前在福建沿海的忙碌火并的状况来说，他也不见得有空来对付“髡贼”。
 
-　　“我们把浙江移民运到高雄屏东，不但可以有一个合适的地点进行检疫净化，一部分人还可以就地开展农业开发。嘉南平原是台湾最好的农业生产区，不论日照、雨水还是土地都是上等的。我们完全可以以大型农场的方式进行集约化开发，比在海南这里小农经济居多的生产环境要好得多了。对我们的农业生产来说将会是个飞跃性进步。可以大幅度改善我们粮食基本要靠进口的局面。”罗铎在力陈以高雄为基地的好处的发言结尾如是说。
+　　“我们把浙江移民运到高雄屏东，不但可以有一个合适的地点进行检疫净化，一部分人还可以就地开展农业开发。嘉南平原是台湾最好的农业生产区，不论日照、雨水还是土地都是上等的。我们完全可以以大型农场的方式进行集约化开发，比在海南这里小农经济居多的生产环境要好得多了。对我们的农业生产来说将会是个飞跃性进步。可以大幅度改善我们粮食基本要靠进口的局面。”[罗铎][y011]在力陈以高雄为基地的好处的发言结尾如是说。
 
 　　“郑芝龙要对我们不利怎么办？他的老窝可就在福建。”有人提出了异议。郑芝龙把福建视为老巢，他又有官身，势力不容小觑。
 
@@ -57,3 +57,4 @@ tag: [normal]
 　　这7艘蒸汽机战舰预计在这一海域活动到1633年的年初。到这个时候，第二批在临高建造建造的901舰已经能够投入现役，即可将前一批战舰接替回临高进行维护。
 
 　　这两支分遣舰队将以高雄为主基地。为蒸汽机/风帆混合动力战舰提供后勤支援的港口设施和储备的物资要比风帆战舰复杂的多，因此北上接运难民的船只也不会有空载吨位的忧虑了。除了运送难民所需的物资之外，在高雄和济州岛两处开设分基地的所需要的物资也足够塞满船舱了。
+[y011]: /characters/y011 "罗铎"
