--- a/_posts/2009-10-10-1-04000.md
+++ b/_posts/2009-10-10-1-04000.md
@@ -92,7 +92,7 @@ tag: [normal]
 
 　　“要审查！说不定是美国特务。”魏爱文手舞足蹈，“肯定受FBI指示打入我们内部的，免得我们改写历史！”
 
-　　“小魏啊，你知道FBI干什么的么？”百事通罗铎来提醒他的技术性错误了。
+　　“小魏啊，你知道FBI干什么的么？”百事通[罗铎][y011]来提醒他的技术性错误了。
 
 　　“反正就一个美国特务组织，还管保卫总统！”
 
@@ -178,3 +178,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
+[y011]: /characters/y011 "罗铎"
