--- a/_posts/2009-9-15-1-01500.md
+++ b/_posts/2009-9-15-1-01500.md
@@ -32,11 +32,11 @@ tag: [normal]
 
 　　下一个话题依然是能源组回答，即石油类产品的替代。穿越众并不单单需要发电机，他们也需要使用摩托车、汽车和小型的船只。无论汽油还是柴油，都不能长期储存，如果不能燃料自给，这些东西就没有必要带得太多了。
 
-　　“呵呵，会议主持人的话我不敢赞同，”能源组接着站起来发言的是罗铎，此人在网络讨论时候就发了大量有关能源方面的长篇累牍的帖子，“不过据说主持人是文科生，可以理解。”
+　　“呵呵，会议主持人的话我不敢赞同，”能源组接着站起来发言的是[罗铎][y011]，此人在网络讨论时候就发了大量有关能源方面的长篇累牍的帖子，“不过据说主持人是文科生，可以理解。”
 
 　　[萧子山][y001]的脸一下红了，他最大的怨念就是“文科生”成为一句藐视的评价。他强忍悲愤，故作镇定。
 
-　　“其实我们要谈的，还是一个原动机问题。”罗铎显然没感受到主持人的怨念，“船也好，汽车也好，摩托车也好，都可以使用非石油类的燃料进行驱动，所以石油的代用品问题，并不是我们迫切解决的问题。
+　　“其实我们要谈的，还是一个原动机问题。”[罗铎][y011]显然没感受到主持人的怨念，“船也好，汽车也好，摩托车也好，都可以使用非石油类的燃料进行驱动，所以石油的代用品问题，并不是我们迫切解决的问题。
 
 　　“基本上，使用石油类燃料的原动机都可以改造成煤气机来驱动，当然这个功率上会受一定的损失。不过二战末期，德国人在装甲输送车和坦克上曾经试验性的安装过煤气发生器，所以功率方面也还能接受。煤气发生器这个技术非常简单实用，实现难度很低。
 
@@ -44,7 +44,7 @@ tag: [normal]
 
 　　“现在有地方买蒸汽机吗？别说打算叫我们造啊。”机械组里有人发话了。
 
-　　“你们搞机械的，做个蒸汽机还不容易？那可是19世纪的产品！”罗铎反问，“我们的原动机不可能一直靠储备运转，总有一天要消耗完的。”
+　　“你们搞机械的，做个蒸汽机还不容易？那可是19世纪的产品！”[罗铎][y011]反问，“我们的原动机不可能一直靠储备运转，总有一天要消耗完的。”
 
 　　“蒸汽机还真没搞过，”机械组里交头接耳的一小会，[马千瞩][y005]站了起来，“蒸汽机原理大家都明白，现成的设计资料也很多，我们有信心造出来的。锅炉是主要难点，看我们的材料能到什么样的地步，这得看冶金部门的水平了。”
 
@@ -54,7 +54,7 @@ tag: [normal]
 
 　　“你们组内先协调出个方案吧。请继续。”
 
-　　“暂时就想到这么多。”罗铎显得很兴奋，露出点疲惫的神情来。
+　　“暂时就想到这么多。”[罗铎][y011]显得很兴奋，露出点疲惫的神情来。
 
 　　“为什么不考虑生物柴油？”有人发问了，“最近这方面的报道相当多，很多国家都进入到实用阶段。”
 
@@ -90,7 +90,7 @@ tag: [normal]
 
 　　“油母页岩的原油质量是很好的，可炼制高品质的柴油，所以我认为柴油机和汽油机都可以正常的运作，用不着什么煤气机。”
 
-　　“日处理1600吨！”罗铎跳了起来，“我们都去背石头也不够用啊！”
+　　“日处理1600吨！”[罗铎][y011]跳了起来，“我们都去背石头也不够用啊！”
 
 　　“对油页岩炼油厂来说，这已经是很小的规模了，”钟利时带着高级知识分子高深莫测的笑容，“现实中是用火车、皮带机运输的，上面油厂的设计产量还不如现实中某页岩油厂的一套装置多。我提供服务的油厂有好几套比这个能力还强的炼油装置，他们一座炉的处理能力是200吨。
 
@@ -103,3 +103,4 @@ tag: [normal]
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
 [y010]: /characters/y010 "常凯申"
+[y011]: /characters/y011 "罗铎"
