--- a/_posts/2010-1-26-2-10100.md
+++ b/_posts/2010-1-26-2-10100.md
@@ -42,7 +42,7 @@ tag: [normal]
 
 　　土法炼焦的方法有很多，最简单的就是堆积起来的露天法，2―4吨煤在地面上堆成半圆堆，底部直径3－4米，上面盖上稻草引火，4－5天就可以成焦了，成焦率只有50％，这种方法在大炼钢铁时代还被使用过，造成的资源浪费和环境污染极其严重，穿越者可以不顾环保问题，但是煤焦油是化工的重要原材料，不能随便的浪费。
 
-　　罗铎再次从计算机的科技资源库里找来的一种改良方案，使用开滦圆炉进行炼焦生产。开滦炉有三种不同的规格，每次投料数从55吨到260吨不等。以55吨级的炉的性价比最好，也符合穿越者在初级阶段煤炭有限的现状。
+　　[罗铎][y011]再次从计算机的科技资源库里找来的一种改良方案，使用开滦圆炉进行炼焦生产。开滦炉有三种不同的规格，每次投料数从55吨到260吨不等。以55吨级的炉的性价比最好，也符合穿越者在初级阶段煤炭有限的现状。
 
 　　建筑材料也很简单，除了少数部件需要铁皮之外，基本材料就是砖和耐火砖。整个炼焦过程大概在12天左右，成焦率75％，这种炉能够利用炼焦产生的煤气加热炼焦炉，同时能回收一部分的煤焦油。这些用水冷却回收之后的焦油被收集到陶罐里，准备将来作为化工原料。
 
@@ -57,3 +57,4 @@ tag: [normal]
 　　当季无声看到火舌开始变短，碳花稀疏起来的状况，他知道铁水中剩余的碳分开始接近钢的含量。他用摇炉杆上下起落了一二次，看看有没有更多的碳花爆出，当看到碳花没有突然增多，就下令关风了。
 
 　　随后，工人们把炉盖和风管都拆掉，开始打渣和扒渣，最后浇注。型砂采用的是90％的黄沙、5％的陶土和5％的白泥，浇铸成型之后就是钢锭了。至于这个钢锭是高碳、中碳和低碳，季无声暂时还控制不了，每炼一炉出来，就要做一次试验来确定这是什么钢。
+[y011]: /characters/y011 "罗铎"
