--- a/_posts/2013-5-31-6-04800.md
+++ b/_posts/2013-5-31-6-04800.md
@@ -54,7 +54,7 @@ tag: [normal]
 
 　　新农机，新种子，新水利，新农业技术，虽然在逐步推进中，但化肥才无疑是最直接有效的技术手段，之前那种小打小闹的项目自然不够。
 
-　　所以作为这个农业增产计划的总负责人，[吴南海][y009]在大图书馆罗铎等一帮人的热心配合下，在和企划—院和工业口经过反复磋商之后，搞出这个真正现代化的化肥厂规划：首期项目是1万吨普通过磷酸钙和配套的硫酸厂4千吨硫酸增产项目。
+　　所以作为这个农业增产计划的总负责人，[吴南海][y009]在大图书馆[罗铎][y011]等一帮人的热心配合下，在和企划—院和工业口经过反复磋商之后，搞出这个真正现代化的化肥厂规划：首期项目是1万吨普通过磷酸钙和配套的硫酸厂4千吨硫酸增产项目。
 
 　　按种粮食每亩30公斤用量计算，全海南600万亩总共需要18万吨，这1万吨产量自然只是牛刀小试。
 
@@ -95,3 +95,4 @@ tag: [normal]
 　　“哪里，哪里”，季退思因为最近化工口项目不断，颇有些意气风发的感觉，“我们是互相帮助，今后我们还要更好的合作啊。”
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
+[y011]: /characters/y011 "罗铎"
